--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
         <!-- Slide Container -->
 
       <div class="slideContainer">
-        <img src="/Images/introImage1.jpg" class="slide" alt="slide image 1">
-        <img src="/Images/introImage2.jpg" class="slide" alt=" slide image 2">
-        <img src="/Images/introImage3.jpg" class="slide" alt="slide image 3">
-        <img src="/Images/introImage4.jpg" class="slide" alt="slide image 4">
-        <img src="/Images/introImage5.jpg" class="slide" alt="slide image 5">
+        <img src="/Images/slideImages/introImage1.jpg" class="slide" alt="slide image 1">
+        <img src="/Images/slideImages/introImage2.jpg" class="slide" alt=" slide image 2">
+        <img src="/Images/slideImages/introImage3.jpg" class="slide" alt="slide image 3">
+        <img src="/Images/slideImages/introImage4.jpg" class="slide" alt="slide image 4">
+        <img src="/Images/slideImages/introImage5.jpg" class="slide" alt="slide image 5">
       </div>
 
       <!-- COMPANY LOGO  -->
@@ -139,11 +139,11 @@
       <div class="middle-slides">
 
         <div class="middle-slide-container">
-          <img src="/Images/introImage1.jpg" class="middle-slide"  alt="slide image1">
-          <img src="/Images/introImage2.jpg" class="middle-slide" alt="slide image2">
-          <img src="/Images/introImage3.jpg" class="middle-slide" alt="slide image3">
-          <img src="/Images/introImage4.jpg" class="middle-slide" alt="slide image4">
-          <img src="/Images/introImage5.jpg" class="middle-slide" alt="slide image5">
+          <img src="/Images/slideImages/introImage1.jpg" class="middle-slide"  alt="slide image1">
+          <img src="/Images/slideImages/introImage2.jpg" class="middle-slide" alt="slide image2">
+          <img src="/Images/slideImages/introImage3.jpg" class="middle-slide" alt="slide image3">
+          <img src="/Images/slideImages/introImage4.jpg" class="middle-slide" alt="slide image4">
+          <img src="/Images/slideImages/introImage5.jpg" class="middle-slide" alt="slide image5">
         </div>
 
         <img src="/Images/silverHandsLogo.png" class="logo" alt="silver hand uk logo">
