--- a/contact.html
+++ b/contact.html
@@ -79,28 +79,20 @@
         </form>
 
         <!------------------------
-                   icons 
+                   icons
           ------------------------>
 
       <h1 class="page-title">Contact</h1>
 
-      <div class="icon facebook-icon">
+      <div class="icon-container">
         <a href="https://facebook.com/SilverHandUK" target="_blank"><i class="fa fa-facebook fa-3x"></i></a>
-      </div>
 
-      <div class="icon instagram-icon">
         <a href="https://instagram.com/SilverHandUK" target="_blank"><i class="fa fa-instagram fa-3x"></i></a>
-      </div>
 
-      <div class="icon twitter-icon">
         <a href="https://twitter.com/SilverHandUK" target="_blank"><i class="fa fa-twitter fa-3x"></i></a>
-      </div>
 
-      <div class="icon envelope-icon">
         <a href=""><i class="fa fa-envelope fa-3x"></i></a>
-      </div>
 
-      <div class="icon phone-icon">
         <a href=""><i class="fa fa-phone fa-3x"></i></a>
       </div>
 
