[AM]: Added and stlyed slide with images to the sell section on the home page

--- a/index.html
+++ b/index.html
@@ -219,6 +219,14 @@
     <div class="Sell section">
       <h3>Sell your Sole</h3>
 
+          <!-- Sell section slides -->
+
+       <div class="sell-section-slides">
+          <img src="Images/slideImages/footImage1.jpg" alt="sell section slide image" class="sell-slide sell-slide-img1">
+          <img src="Images/slideImages/footImage2.jpg" alt="sell section slide image" class="sell-slide sell-slide-img2">
+          <img src="Images/slideImages/footImage3.jpg" alt="sell section slide image" class="sell-slide sell-slide-img3">
+       </div>
+
       <div class="sell-para">
       <p>Got footwear that you no longer love.</p>
       <p>Why not sell it to us to earn a few quids</p>
