[AM]: Added functionality to the sell section slide show

--- a/index.html
+++ b/index.html
@@ -222,9 +222,9 @@
           <!-- Sell section slides -->
 
        <div class="sell-section-slides">
-          <img src="Images/slideImages/footImage1.jpg" alt="sell section slide image" class="sell-slide sell-slide-img1">
-          <img src="Images/slideImages/footImage2.jpg" alt="sell section slide image" class="sell-slide sell-slide-img2">
-          <img src="Images/slideImages/footImage3.jpg" alt="sell section slide image" class="sell-slide sell-slide-img3">
+          <img src="Images/slideImages/footImage1.jpg" alt="sell section slide image" class="sell-slide">
+          <img src="Images/slideImages/footImage2.jpg" alt="sell section slide image" class="sell-slide">
+          <img src="Images/slideImages/footImage3.jpg" alt="sell section slide image" class="sell-slide">
        </div>
 
       <div class="sell-para">
