[AM]: Minor changes to class names and structure of comment form

--- a/contact.html
+++ b/contact.html
@@ -52,12 +52,14 @@
               comment form
            -------------------->
 
-        <form action="" class="comment-form">
+
           <h1 class="form-title">Comments</h1>
+
+          <form action="" class="comment-form">
 
           <div class="first-name-section form-section">
             <label for="first-name" class="first-name-lable">First Name</label>
-            <input id="firt-name" type="text" required placeholder="First Name" class="first-name">
+            <input id="first-name" type="text" required placeholder="First Name" class="first-name">
           </div>
 
           <div class="second-name-section form-section">
