[AM]: Changed comment textarea font size and form lables class name

--- a/contact.html
+++ b/contact.html
@@ -58,17 +58,17 @@
           <form action="" class="comment-form">
 
           <div class="first-name-section form-section">
-            <label for="first-name" class="first-name-lable">First Name</label>
-            <input id="first-name" type="text" required placeholder="First Name" class="first-name">
+            <label for="firstName" class="first-name-lable">First Name</label>
+            <input id="firstName" type="text" required placeholder="First Name" class="first-name">
           </div>
 
           <div class="second-name-section form-section">
-            <label for="second-name" class="second-name">Second Name</label>
-            <input id="second-name" placeholder="Second Name" required type="text" class="second-name">
+            <label for="secondName" class="second-name-lable">Second Name</label>
+            <input id="secondName" placeholder="Second Name" required type="text" class="second-name">
           </div>
 
           <div class="email-section form-section">
-            <label for="email" class="email">Email</label>
+            <label for="email" class="email-lable">Email</label>
              <input type="email" id="email" required placeholder="john.doe@email.com" class="email">
           </div>
 
