[AM]: Added and styled tooltips to the contact section icons

--- a/contact.html
+++ b/contact.html
@@ -87,15 +87,15 @@
       <h1 class="page-title">Contact</h1>
 
       <div class="icon-container">
-        <a href="https://facebook.com/SilverHandUK" target="_blank"><i class="fa fa-facebook fa-3x"></i></a>
+        <a class = 'facebook-icon' href="https://facebook.com/SilverHandUK" target="_blank"><i class="fa fa-facebook fa-3x"></i></a>
 
-        <a href="https://instagram.com/SilverHandUK" target="_blank"><i class="fa fa-instagram fa-3x"></i></a>
+        <a class = 'instagram-icon' href="https://instagram.com/SilverHandUK" target="_blank"><i class="fa fa-instagram fa-3x"></i></a>
 
-        <a href="https://twitter.com/SilverHandUK" target="_blank"><i class="fa fa-twitter fa-3x"></i></a>
+        <a class = 'twitter-icon' href="https://twitter.com/SilverHandUK" target="_blank"><i class="fa fa-twitter fa-3x"></i></a>
 
-        <a href=""><i class="fa fa-envelope fa-3x"></i></a>
+        <a class = 'envelope-icon' href=""><i class="fa fa-envelope fa-3x"></i></a>
 
-        <a href=""><i class="fa fa-phone fa-3x"></i></a>
+        <a class = 'phone-icon' href=""><i class="fa fa-phone fa-3x"></i></a>
       </div>
 
       </main>
