[AM]: Styled hero on the about page

--- a/about.html
+++ b/about.html
@@ -40,8 +40,17 @@
 
     </header>
 
+    <div class="hero">
+      <div class="dark-filter">
+        <h1 class="page-title">Our Story</h1>
+      </div>
+    </div>
+
     <main class="main">
-      <h1 class="page-title">About</h1>
+      <p class="about-para"></p>
+      <p class="about-para"></p>
+      <p class="about-para"></p>
+
     </main>
 
     <!-----------------------------
