[AM]: Added and styled paragraphs for the about page

--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
           <li><a class="sellIcon" href="#"><i class="material-icons">local_atm</i></a></li>
           <li><a class="contactIcon" href="contact.html"><i class="material-icons ">mail</i></a></li>
           <li><i class="fa fa-cart-plus">
-              <span class="cart-item">0</span>
+              <span class="cart-item">0<span/>
             </i></li>
         </ul>
 
@@ -47,9 +47,23 @@
     </div>
 
     <main class="main">
-      <p class="about-para"></p>
-      <p class="about-para"></p>
-      <p class="about-para"></p>
+      <div class="paragaphs">
+
+      <p class="para">Silver Hand - Find Your Sole The place to find your sole, Silver Hand UK is the number 1 place to find your preloved trainers, all brands, sizes and colours and all footwear are good value & quality.</p>
+
+      <p class="para">Silver Hand - Find Your Sole The place to find your sole, Silver Hand UK is the number 1 place to find your preloved trainers, all brands, sizes and colours and all footwear are good value & quality.</p>
+
+      <p class="para">Silver Hand - Find Your Sole The place to find your sole, Silver Hand UK is the number 1 place to find your preloved trainers, all brands, sizes and colours and all footwear are good value & quality.</p>
+
+      <p class="para">We have all types of shoes, boots, sandals, for you, him & her. Save the planet and get yourself a pair of preloved trainers at Silver Hand UK step by step this increases Recycling & Reduces Landfill waste.</p>
+
+      <p class="para">We have all types of shoes, boots, sandals, for you, him & her. Save the planet and get yourself a pair of preloved trainers at Silver Hand UK step by step this increases Recycling & Reduces Landfill waste.</p>
+
+      <p class="para">We have all types of shoes, boots, sandals, for you, him & her. Save the planet and get yourself a pair of preloved trainers at Silver Hand UK step by step this increases Recycling & Reduces Landfill waste.</p>
+
+      <p class="para social-para">Follow our journey on our social media platforms <a href='#footer-icons' class="social-link">@SilverHandUK</a></p>
+
+      </div>
 
     </main>
 
@@ -63,7 +77,7 @@
       <h3>Connect with us</h3>
 
       <!-- ICONS CONTAINER -->
-      <div class="icons">
+      <div class="icons" id="footer-icons">
         <a href="https://twitter.com/SilverHandUK" title='Twitter' target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
         <a href="https://facebook.com/SilverHandUK" title="Facebook" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a>
         <a href="https://instagram.com/SilverHandUK" title="Instagram" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
