[AM]: Added comments to highlight section

--- a/about.html
+++ b/about.html
@@ -40,11 +40,19 @@
 
     </header>
 
+    <!------------------
+           Hero
+    -------------------->
+
     <div class="hero">
       <div class="dark-filter">
         <h1 class="page-title">Our Story</h1>
       </div>
     </div>
+
+    <!---------------
+       Main section  
+      --------------->
 
     <main class="main">
       <div class="paragaphs">
