--- a/contact.html
+++ b/contact.html
@@ -41,6 +41,16 @@
 
     </header>
 
+    <!------------------
+           Hero
+    -------------------->
+
+    <div class="hero">
+      <div class="dark-filter">
+        <h1 class="page-title">Contact</h1>
+      </div>
+    </div>
+
     <!--------------------------
         Main section including
                Icons
