--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
         <img src="/Images/silverHandsLogo.PNG" class="logo" alt="Silver Hand UK Logo">
 
         <ul class="navList">
-          <li><a class="sellIcon" href="#"><i class="material-icons">local_atm</i></a></li>
+          <li><a class="sellIcon" href="sell.html"><i class="material-icons">local_atm</i></a></li>
           <li><a class="contactIcon" href="contact.html"><i class="material-icons ">mail</i></a></li>
           <li><i class="fa fa-cart-plus">
               <span class="cart-item">0<span/>
@@ -51,7 +51,7 @@
     </div>
 
     <!---------------
-       Main section  
+       Main section
       --------------->
 
     <main class="main">
