--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
         <img src="/Images/silverHandsLogo.PNG" class="logo" alt="Silver Hand UK Logo">
 
         <ul class="navList">
-          <li><a class="sellIcon" href="#"><i class="material-icons">local_atm</i></a></li>
+          <li><a class="sellIcon" href="sell.html"><i class="material-icons">local_atm</i></a></li>
           <li><a class="aboutIcon" href="about.html"><i class="material-icons ">view_headline</i></a></li>
           <li><i class="fa fa-cart-plus">
               <span class="cart-item">0</span>
@@ -47,7 +47,7 @@
 
     <div class="hero">
       <div class="dark-filter">
-        <h1 class="page-title">Contact</h1>
+        <h1 class="hero-title">Contact</h1>
       </div>
     </div>
 
