[AM]: Added and styled images on sell section

--- a/sell.html
+++ b/sell.html
@@ -54,7 +54,27 @@
           main
     -------------------->
     <main class="main">
-      
+
+
+<!------------------------
+  image and para section
+ ------------------------>
+
+      <div class="sell-img-container">
+        <div class="sell-img-pair sImg1">
+          <img src="Images/slideImages/footImage1.jpg" alt="" class="sell-img">
+          <p>Got footwear that you no longer love or you don't use.</p>
+        </div>
+        <div class="sell-img-pair sImg2">
+          <img src="Images/slideImages/footImage2.jpg" alt="" class="sell-img">
+          <p>Why not sell them to us instead of throwing them away</p>
+        </div>
+        <div class="sell-img-pair sImg3">
+          <img src="Images/slideImages/footImage3.jpg" alt="" class="sell-img">
+          <p>Save the planet and make a few quids</p>
+        </div>
+      </div>
+
     </main>
 
 
