[AM]: Made changes

--- a/sell.html
+++ b/sell.html
@@ -75,6 +75,26 @@
         </div>
       </div>
 
+      <h1 class="form-title">Sell Form</h1>
+
+      <form action="" class="sell-form">
+        <div class="first-name-section form-section">
+          <label for="firstName" class="first-name-lable">First Name</label>
+          <input id="firstName" type="text" required placeholder="First Name" class="first-name">
+        </div>
+
+        <div class="second-name-section form-section">
+          <label for="secondName" class="second-name-lable">Second Name</label>
+          <input id="secondName" placeholder="Second Name" required type="text" class="second-name">
+        </div>
+
+        <div class="email-section form-section">
+          <label for="email" class="email-lable">Email</label>
+           <input type="email" id="email" required placeholder="john.doe@email.com" class="email">
+        </div>
+
+      </form>
+
     </main>
 
 
