--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, intial-scale=1.0">
     <title>SilverHand UK</title>
     <link rel="stylesheet" href="style.css">
     <!-- Font Awesome link -->
