--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <main class="main">
 
       <!-- Men Collection -->
-      <section class="section menSection">
+      <section class="section men-section">
 
         <h3 class="section-title">Men's Sole</h3>
 
@@ -85,20 +85,20 @@
         <div class="MenCollection">
 
             <div  class="product-container product-1-men">
-              <img class="product-img" src="/Images/MaleTrainers/maleTrainer1.jpg" alt="product image nike airmax 720">
+              <img class="product-img-men" src="/Images/MaleTrainers/maleTrainer1.jpg" alt="product image nike airmax 720">
               <h3>Nike Airmax 720</h3>
               <h4>£70</h4>
             </div>
 
             <div class="product-container product-2-men">
-              <img  class="product-img" src="/Images/MaleTrainers/maleTrainer2.jpg" alt="product image nike airforce 1 low">
+              <img  class="product-img-men" src="/Images/MaleTrainers/maleTrainer2.jpg" alt="product image nike airforce 1 low">
               <h3>Nike Airforce 1 Low</h3>
               <h4>£50</h4>
             </div>
 
 
             <div class="product-container product-3-men">
-              <img  class="product-img" src="/Images/MaleTrainers/maleTrainer3.jpg" alt="product image nike airforce 1 mid">
+              <img  class="product-img-men" src="/Images/MaleTrainers/maleTrainer3.jpg" alt="product image nike airforce 1 mid">
               <h3>Nike Airforce 1 Mid</h3>
               <h4>£65</h4>
             </div>
@@ -106,7 +106,7 @@
 
 
             <div class="product-container product-4-men" >
-              <img class="product-img" src="/Images/MaleTrainers/maleTrainer4.jpg" alt="product image nike airforce 1 low">
+              <img class="product-img-men" src="/Images/MaleTrainers/maleTrainer4.jpg" alt="product image nike airforce 1 low">
               <h3>Nike Airforce 1 low</h3>
               <h4>£60</h4>
             </div>
@@ -137,62 +137,43 @@
 
 
       <!-- Women Collection -->
-      <section class="section">
+      <section class="section women-section">
 
         <h3 class="section-title">Women's Sole</h3>
 
         <div class="WomenCollection">
 
-          <article class="product">
-            <div class="product-img">
-              <img src="/Images/femaleTrainers/femaleTrainer1.jpg" alt="product image nike heel">
-              <button type="button" class="bag-btn" name="button"><i class="fa fa-cart-plus"></i> Add to cart</button>
-            </div>
-            <h3>Nike Wedges</h3>
-            <h4>£70</h4>
-          </article>
 
-          <article class="product">
-            <div class="product-img">
-              <img src="/Images/femaleTrainers/femaleTrainer2.jpg" alt="product image">
-              <button type="button" class="bag-btn" name="button"><i class="fa fa-cart-plus"></i> Add to cart</button>
+            <div class="product-container product-women-1">
+              <img class="product-img-women" src="/Images/femaleTrainers/femaleTrainer1.jpg" alt="product image nike heel">
+              <h3>Nike Wedges</h3>
+              <h4>£70</h4>
             </div>
-            <h3>Puma Classic</h3>
-            <h4>£40</h4>
-          </article>
 
-          <article class="product">
-            <div class="product-img">
-              <img src="/Images/femaleTrainers/femaleTrainer3.jpg" alt="product image">
-              <button type="button" class="bag-btn" name="button"><i class="fa fa-cart-plus"></i> Add to cart</button>
+
+            <div class="product-container product-women-2">
+              <img class="product-img-women" src="/Images/femaleTrainers/femaleTrainer2.jpg" alt="product image">
+              <h3>Puma Classic</h3>
+              <h4>£40</h4>
             </div>
-            <h3>Nike Cortez</h3>
-            <h4>£50</h4>
-          </article>
 
-          <article class="product">
-            <div class="product-img">
-              <img src="/Images/femaleTrainers/femaleTrainer4.jpg" alt="product image">
-              <button type="button" class="bag-btn" name="button"><i class="fa fa-cart-plus"></i> Add to cart</button>
+            <div class="product-container product-women-3">
+              <img class="product-img-women" src="/Images/femaleTrainers/femaleTrainer3.jpg" alt="product image">
+              <h3>Nike Cortez</h3>
+              <h4>£50</h4>
             </div>
-            <h3>Nike Wedges</h3>
-            <h4>£70</h4>
-          </article>
 
-          <article class="product">
-            <div class="product-img">
-              <img src="/Images/femaleTrainers/femaleTrainer5.jpg" alt="product image">
-              <button type="button" class="bag-btn" name="button"><i class="fa fa-cart-plus"></i> Add to cart</button>
+
+            <div class="product-container product-women-4">
+              <img class="product-img-women" src="/Images/femaleTrainers/femaleTrainer4.jpg" alt="product image">
+              <h3>Nike Wedges</h3>
+              <h4>£70</h4>
             </div>
-            <h3>Dunlop Platform</h3>
-            <h4>£30</h4>
-          </article>
-
 
 
         </div>
 
-        <button type="button" class="shop-btn" name="button"><a href="#">Find your Sole</a></button>
+        <a href="#">Find your Sole</a>
 
       </section>
     </main>
