[AM]: Added and styled men section

--- a/index.html
+++ b/index.html
@@ -78,7 +78,48 @@
 
 
 
-      <!-- Men Collection -->
+      <!--***************
+           Men Collection
+        ******************-->
+
+        <section class="men-section-container">
+
+          <h2 class="men-section-title">Men's Sole</h2>
+
+          <div class="men-section-product-container">
+
+            <div class="men-section-product men-product-1">
+              <img src="Images/MaleTrainers/maleTrainer1.jpg" alt="" class="men-product-img">
+              <h4 class="men-product-description">Nike Airmax 720</h4>
+              <h4 class="men-product-price">£80</h4>
+              <a href="" class="shop-men-product-now-btn">Shop now</a>
+            </div>
+
+            <div class="men-section-product men-product-2">
+              <img src="Images/MaleTrainers/maleTrainer2.jpg" alt="" class="men-product-img">
+              <h4 class="men-product-description">Nike Airforce 1 Reflect</h4>
+              <h4 class="men-product-price">£70</h4>
+              <a href="" class="shop-men-product-now-btn">Shop now</a>
+            </div>
+
+            <div class="men-section-product men-product-3">
+              <img src="Images/MaleTrainers/maleTrainer3.jpg" alt="" class="men-product-img">
+              <h4 class="men-product-description">Nike Airforce 1 Mid</h4>
+              <h4 class="men-product-price">£90</h4>
+              <a href="" class="shop-men-product-now-btn">Shop now</a>
+            </div>
+
+            <div class="men-section-product men-product-4">
+              <img src="Images/MaleTrainers/maleTrainer4.jpg" alt="" class="men-product-img">
+              <h4 class="men-product-description">Nike Airforce 1 Suede</h4>
+              <h4 class="men-product-price">£65</h4>
+              <a href="" class="shop-men-product-now-btn">Shop now</a>
+            </div>
+
+          </div>
+
+          <a href="#" class="shop-btn-men">Fing your sole</a>
+        </section>
 
 
       <!-----------------------------
