[AM]: Transfered files to new laptop

--- a/index.html
+++ b/index.html
@@ -122,9 +122,23 @@
         </section>
 
 
-      <!-----------------------------
-            Middle slides
-       ------------------------------->
+
+
+      <!---***************************
+                Middle slides
+       *****************************-->
+     <div class="middle">
+
+       <div class="middle-slides-container">
+         <img src="" alt="" class="middle-slide-img">
+         <img src="" alt="" class="middle-slide-img">
+         <img src="" alt="" class="middle-slide-img">
+         <img src="" alt="" class="middle-slide-img">
+         <img src="" alt="" class="middle-slide-img">
+       </div>
+       <img src="" alt="" class="logo">
+     </div>
+
 
 
       <!-- Women Collection -->
