[AM]: Added middle slides section

--- a/index.html
+++ b/index.html
@@ -130,13 +130,13 @@
      <div class="middle">
 
        <div class="middle-slides-container">
-         <img src="" alt="" class="middle-slide-img">
-         <img src="" alt="" class="middle-slide-img">
-         <img src="" alt="" class="middle-slide-img">
-         <img src="" alt="" class="middle-slide-img">
-         <img src="" alt="" class="middle-slide-img">
+         <img src="/Images/slideImages/introImage1.jpg" alt="" class="middle-slide-img">
+         <img src="/Images/slideImages/introImage2.jpg" alt="" class="middle-slide-img">
+         <img src="/Images/slideImages/introImage3.jpg" alt="" class="middle-slide-img">
+         <img src="/Images/slideImages/introImage4.jpg" alt="" class="middle-slide-img">
+         <img src="/Images/slideImages/introImage5.jpg" alt="" class="middle-slide-img">
        </div>
-       <img src="" alt="" class="logo">
+       <img src="/Images/silverHandsLogo.png" alt="" class="logo">
      </div>
 
 
