[AM] Added women section

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
           </div>
 
-          <a href="#" class="shop-btn-men">Fing your sole</a>
+          <a href="#" class="shop-btn-men">Find Your Sole</a>
         </section>
 
 
@@ -141,7 +141,56 @@
 
 
 
-      <!-- Women Collection -->
+      <!--****************
+         Women Collection
+        *****************-->
+
+        <section class="women-section-container">
+
+          <h2 class="women-section-title">Women's Sole</h2>
+
+          <div class="women-section-product-container">
+
+            <div class="women-section-product women-product-1">
+
+              <img src="/Images/FemaleTrainers/femaletrainer1.jpg" alt="" class="women-product-img">
+              <h4 class="women-product-description">Nike Wedge Grey</h4>
+              <h4 class="women-product-price">£60</h4>
+              <a href="" class="shop-women-product-now-btn">Shop now</a>
+
+            </div>
+
+            <div class="women-section-product women-product-2">
+
+              <img src="/Images/FemaleTrainers/femaletrainer2.jpg" alt="" class="women-product-img">
+              <h4 class="women-product-description">Puma Classic Suede</h4>
+              <h4 class="women-product-price">£35</h4>
+              <a href="" class="shop-women-product-now-btn">Shop now</a>
+
+            </div>
+
+            <div class="women-section-product women-product-3">
+
+              <img src="/Images/FemaleTrainers/femaletrainer3.jpg" alt="" class="women-product-img">
+              <h4 class="women-product-description">Nike Cortez</h4>
+              <h4 class="women-product-price">£45</h4>
+              <a href="" class="shop-women-product-now-btn">Shop now</a>
+
+            </div>
+
+            <div class="women-section-product women-product-4">
+
+              <img src="/Images/FemaleTrainers/femaletrainer4.jpg" alt="" class="women-product-img">
+              <h4 class="women-product-descriShop nowption">Nike Wedge red</h4>
+              <h4 class="women-product-price">£60</h4>
+              <a href="" class="shop-women-product-now-btn"></a>
+
+            </div>
+
+          </div>
+
+        <a href="#" class="shop-btn-women">Find Your Sole</a>
+        </section>
 
 
       <!-----------------------------
