[AM] Structured and styled women section

--- a/index.html
+++ b/index.html
@@ -181,9 +181,9 @@
             <div class="women-section-product women-product-4">
 
               <img src="/Images/FemaleTrainers/femaletrainer4.jpg" alt="" class="women-product-img">
-              <h4 class="women-product-descriShop nowption">Nike Wedge red</h4>
+              <h4 class="women-product-description">Nike Wedge red</h4>
               <h4 class="women-product-price">£60</h4>
-              <a href="" class="shop-women-product-now-btn"></a>
+              <a href="" class="shop-women-product-now-btn">Shop now</a>
 
             </div>
 
