[AM]: Styled sell section

--- a/index.html
+++ b/index.html
@@ -193,9 +193,20 @@
         </section>
 
 
-      <!-----------------------------
+      <!--***********************
           Customer sell section
-       ----------------------------->
+       *************************-->
+       <div class="sell-section-container">
+
+         <img src="/Images/slideImages/footImage1.jpg" alt="Image of trainer boxes" class="sell-section-img">
+
+         <div class='sell-para-btn'>
+         <p class="sell-section-paragraph">If you got any footwear that you no longer love
+           why not sell it to us and earn some money</p>
+         <a href="sell.html" class="sell-btn">Sell Sole</a>
+         </div>
+
+       </div>
 
     </main>
 
