[AM]: Changed middle slides and sell section divs to section tags

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       <!---***************************
                 Middle slides
        *****************************-->
-     <div class="middle">
+     <section class="middle">
 
        <div class="middle-slides-container">
          <img src="/Images/slideImages/introImage1.jpg" alt="" class="middle-slide-img">
@@ -133,7 +133,8 @@
          <img src="/Images/slideImages/introImage5.jpg" alt="" class="middle-slide-img">
        </div>
        <img src="/Images/silverHandsLogo.png" alt="" class="logo">
-     </div>
+       
+     </section>
 
 
 
@@ -187,7 +188,7 @@
       <!--***********************
           Customer sell section
        *************************-->
-       <div class="sell-section-container">
+       <section class="sell-section-container">
 
          <img src="/Images/slideImages/footImage1.jpg" alt="Image of trainer boxes" class="sell-section-img">
 
@@ -197,7 +198,7 @@
          <a href="sell.html" class="sell-btn">Sell Sole</a>
          </div>
 
-       </div>
+       </section>
 
     </main>
 
