[AM]: Changed all section tags to div tags

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
            Men Collection
         ******************-->
 
-        <section class="men-section-container">
+        <div class="men-section-container">
 
 
           <div class="men-section-product-container">
@@ -115,7 +115,7 @@
           </div>
 
           <a href="#" class="shop-btn-men">Find Your Sole</a>
-        </section>
+        </div>
 
 
 
@@ -123,7 +123,7 @@
       <!---***************************
                 Middle slides
        *****************************-->
-     <section class="middle">
+     <div class="middle">
 
        <div class="middle-slides-container">
          <img src="/Images/slideImages/introImage1.jpg" alt="" class="middle-slide-img">
@@ -133,8 +133,8 @@
          <img src="/Images/slideImages/introImage5.jpg" alt="" class="middle-slide-img">
        </div>
        <img src="/Images/silverHandsLogo.png" alt="" class="logo">
-       
-     </section>
+
+     </div>
 
 
 
@@ -142,7 +142,7 @@
          Women Collection
         *****************-->
 
-        <section class="women-section-container">
+        <div class="women-section-container">
 
 
           <div class="women-section-product-container">
@@ -182,13 +182,13 @@
           </div>
 
         <a href="#" class="shop-btn-women">Find Your Sole</a>
-        </section>
+      </div>
 
 
       <!--***********************
           Customer sell section
        *************************-->
-       <section class="sell-section-container">
+       <div class="sell-section-container">
 
          <img src="/Images/slideImages/footImage1.jpg" alt="Image of trainer boxes" class="sell-section-img">
 
@@ -198,7 +198,7 @@
          <a href="sell.html" class="sell-btn">Sell Sole</a>
          </div>
 
-       </section>
+       </div>
 
     </main>
 
