[AM]: Changed header width and removed counter from cart

--- a/index.html
+++ b/index.html
@@ -41,9 +41,7 @@
 
       <img src="/Images/silverHandsLogo.PNG" class="logo" alt="Silver Hand UK Logo">
 
-    <i class="fa fa-cart-plus">
-        <span class="cart-item">0</span>
-      </i>
+    <i class="fa fa-cart-plus"></i>
 
     </header>
 
