[AM]: Added company logos

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </ul>
       </nav>
 
-      <img  class="logo" alt="Silver Hand UK Logo">
+      <img src="/Images/silverHandsLogo.png" class="logo" alt="Silver Hand UK Logo">
 
     <i class="fa fa-cart-plus"></i>
 
@@ -71,7 +71,7 @@
 
       <!-- COMPANY LOGO  -->
 
-      <img  class="logo" alt="silver hand uk logo">
+      <img src="/Images/silverHandsLogo.png" class="logo" alt="silver hand uk logo">
 
     </div>
 
@@ -130,7 +130,7 @@
          <img src="/Images/slideImages/introImage4.jpg" alt="" class="middle-slide-img">
          <img src="/Images/slideImages/introImage5.jpg" alt="" class="middle-slide-img">
        </div>
-       <img alt="" class="logo">
+       <img src="/Images/silverHandsLogo.png" alt="" class="logo">
 
      </div>
 
@@ -218,7 +218,7 @@
         <a href="https://instagram.com/SilverHandUK" title="Instagram" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
       </div>
       </div>
-      <img  class="logo" alt="silver hand uk logo">
+      <img src="/Images/silverHandsLogo.png" class="logo" alt="silver hand uk logo">
 
     </footer>
 
