[AM]: Styled and added funtion to navigations

--- a/index.html
+++ b/index.html
@@ -27,14 +27,15 @@
 
      <a  class="nav-btn" href="#"><i class="material-icons ">view_headline</i></a>
 
-        <ul id="navMenu" class="navList noDisplay">
-          <li class="aboutIcon nav-icon"> <i class="material-icons ">description</i> <a  href="about.html">About </a></li>
+        <ul id="navMenu" class="navList">
+          <a href="#" class="nav-close-btn"><i class="fa fa-close fa-2x"></i></a>
+          <li class="nav-icon aboutIcon">  <a  href="about.html"><i class="material-icons ">description</i></a></li>
 
-          <li class="contactIcon nav-icon"> <i class="material-icons">mail</i> <a  href="contact.html">Contact</a></li>
+          <li class="nav-icon contactIcon">  <a  href="contact.html"><i class="material-icons ">mail</i></a></li>
 
-          <li class="sellIcon nav-icon"> <i class="material-icons">local_atm</i><a  href="sell.html"> Sell</a></li>
+          <li class=" nav-icon sellIcon"> <a  href="sell.html"><i class="material-icons ">local_atm</i></a></li>
 
-          <li class="shopIcon nav-icon" ><i class="material-icons">local_mall</i><a  href="#"> Shop</a></li>
+          <li class=" nav-icon shopIcon" ><a  href="#"><i class="material-icons ">local_mall</i></a></li>
 
         </ul>
       </nav>
