--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
 
     <header class="header">
 
+    <div class="search-bar-container">
+      <input type="text" class="search-bar">
+      <i class="fa fa-search "></i>
+    </div>
+
+   <div class="main-header">
 
       <nav class="nav-container">
 
@@ -43,6 +49,7 @@
       <img src="/Images/silverHandsLogo.png" class="logo" alt="Silver Hand UK Logo">
 
     <i class="fa fa-cart-plus"></i>
+    </div>
 
     </header>
 
