--- a/index.html
+++ b/index.html
@@ -22,12 +22,6 @@
 
     <header class="header">
 
-    <div class="search-bar-container">
-      <input type="text" class="search-bar">
-      <i class="fa fa-search "></i>
-    </div>
-
-   <div class="main-header">
 
       <nav class="nav-container">
 
@@ -48,8 +42,22 @@
 
       <img src="/Images/silverHandsLogo.png" class="logo" alt="Silver Hand UK Logo">
 
-    <i class="fa fa-cart-plus"></i>
-    </div>
+<!-- Search bar and cart -->
+
+     <div class="search-and-cart-container">
+
+         <div class="search-container">
+           <a href="#" class="search-btn"><i class="fa fa-search"></i></a>
+
+           <div class="search-bar">
+             <a href="#" class="close-search-btn"><i class="fa fa-close fa-1x"></i></a>
+             <input id="userInput" type="text"></div>
+         </div>
+
+         <a href= '#'><i class="fa fa-cart-plus"></i></a>
+     </div>
+
+
 
     </header>
 
