[AM]: Added and started styling search bar overlay

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
          <div class="search-container">
            <a href="#" class="search-btn"><i class="fa fa-search"></i></a>
 
-           <div class="search-bar">
+           <!-- <div class="search-bar">
              <a href="#" class="close-search-btn"><i class="fa fa-close fa-1x"></i></a>
              <input id="userInput" type="text"></div>
-         </div>
+         </div> -->
 
          <a href= '#'><i class="fa fa-cart-plus"></i></a>
      </div>
