[AM]: Styled search overlay and gave functionality to search button

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
      <a  class="nav-btn" href="#"><i class="material-icons ">view_headline</i></a>
 
         <ul id="navMenu" class="navList">
-          <a href="#" class="nav-close-btn"><i class="fa fa-close fa-2x"></i></a>
-          <li class="nav-icon aboutIcon">  <a  href="about.html"><i class="material-icons ">description</i></a></li>
+          <a href="#" class="nav-close-btn"><i class="fa fa-close fa-1x"></i></a>
+          <li class="nav-icon aboutIcon"><a  href="about.html"><i class="material-icons ">description</i></a></li>
 
           <li class="nav-icon contactIcon">  <a  href="contact.html"><i class="material-icons ">mail</i></a></li>
 
@@ -49,12 +49,12 @@
          <div class="search-container">
            <a href="#" class="search-btn"><i class="fa fa-search"></i></a>
 
-           <!-- <div class="search-bar">
+           <div class="search-bar">
              <a href="#" class="close-search-btn"><i class="fa fa-close fa-1x"></i></a>
-             <input id="userInput" type="text"></div>
-         </div> -->
+             <input id="userInput" class="userInput"placeholder="Search products..." type="text"></div>
+         </div>
 
-         <a href= '#'><i class="fa fa-cart-plus"></i></a>
+         <a href='#'><i class="fa fa-cart-plus"></i></a>
      </div>
 
 
