[AM]: Added search result template to search overlay

--- a/index.html
+++ b/index.html
@@ -51,7 +51,23 @@
 
            <div class="search-bar">
              <a href="#" class="close-search-btn"><i class="fa fa-close fa-1x"></i></a>
-             <input id="userInput" class="userInput"placeholder="Search products..." type="text"></div>
+
+             <input id="userInput" class="userInput"placeholder="Search products..." type="text">
+
+             <div class="result-container">
+               <img src="Images/MaleTrainers/maleTrainer1.jpg" alt="" class="result-img">
+
+               <div class="trainer-details">
+               <h4 class="result-title">Nike Airmax 720</h4>
+               <h4 class="trainer-size">Size: 9 uk</h4>
+               <h4 class="result-price">£70</h4>
+               <a href="#" class="view-btn">view</a>
+               </div>
+
+             </div>
+
+           </div>
+
          </div>
 
          <a href='#'><i class="fa fa-cart-plus"></i></a>
