[AM]: tried given search result functionality

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
              <input id="userInput" class="userInput"placeholder="Search products..." type="text">
 
              <div class="result-container">
+
+              <!-- <div class="result">
                <img src="Images/MaleTrainers/maleTrainer1.jpg" alt="" class="result-img">
 
                <div class="trainer-details">
@@ -63,6 +65,8 @@
                <h4 class="result-price">£70</h4>
                <a href="#" class="view-btn">view</a>
                </div>
+              </div> -->
+               
 
              </div>
 
