--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <meta name="viewport" content="width=device-width, intial-scale=1.0">
     <meta charset="utf-8">
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Just+Another+Hand&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+
     <title>contact</title>
     <link rel="stylesheet" href="contactStyle.css">
     <!-- Font Awesome Link -->
@@ -18,26 +24,59 @@
     <header class="header">
 
 
-
-      <nav class="nav">
-
-
-        <ul class="navList">
-          <li><a class="homeIcon" href="index.html"><i class="material-icons ">home</i></a></li>
-          <li><a class="shopIcon" href="#"><i class="material-icons ">local_mall</i></a></li>
-        </ul>
-
-        <img src="/Images/silverHandsLogo.PNG" class="logo" alt="Silver Hand UK Logo">
-
-        <ul class="navList">
-          <li><a class="sellIcon" href="sell.html"><i class="material-icons">local_atm</i></a></li>
-          <li><a class="aboutIcon" href="about.html"><i class="material-icons ">view_headline</i></a></li>
-          <li><i class="fa fa-cart-plus">
-              <span class="cart-item">0</span>
-            </i></li>
-        </ul>
-
-      </nav>
+        <nav class="nav-container">
+  
+       <a  class="nav-btn" href="#"><i class="material-icons ">view_headline</i></a>
+  
+          <ul id="navMenu" class="navList">
+            <a href="#" class="nav-close-btn"><i class="fa fa-close fa-1x"></i></a>
+            <li class="nav-icon homeIcon"><a  href="index.html"><i class="material-icons ">home</i></a></li>
+  
+            <li class="nav-icon aboutIcon">  <a  href="about.html"><i class="material-icons ">description</i></a></li>
+  
+            <li class=" nav-icon sellIcon"> <a  href="sell.html"><i class="material-icons ">local_atm</i></a></li>
+  
+            <li class=" nav-icon shopIcon" ><a  href="#"><i class="material-icons ">local_mall</i></a></li>
+  
+          </ul>
+        </nav>
+  
+        <img src="/Images/silverHandsLogo.png" class="logo" alt="Silver Hand UK Logo">
+  
+  <!-- Search bar and cart -->
+  
+       <div class="search-and-cart-container">
+  
+           <div class="search-container">
+             <a href="#" class="search-btn"><i class="fa fa-search"></i></a>
+  
+             <div class="search-bar">
+               <a href="#" class="close-search-btn"><i class="fa fa-close fa-1x"></i></a>
+  
+               <input id="userInput" class="userInput"placeholder="Search products..." type="text">
+  
+               <div class="result-container">
+  
+                <!-- <div class="result">
+                 <img src="Images/MaleTrainers/maleTrainer1.jpg" alt="" class="result-img">
+  
+                 <div class="trainer-details">
+                 <h4 class="result-title">Nike Airmax 720</h4>
+                 <h4 class="trainer-size">Size: 9 uk</h4>
+                 <h4 class="result-price">£70</h4>
+                 <a href="#" class="view-btn">view</a>
+                 </div>
+                </div> -->
+                 
+  
+               </div>
+  
+             </div>
+  
+           </div>
+  
+           <a href='#'><i class="fa fa-cart-plus"></i></a>
+       </div>
 
     </header>
 
@@ -65,30 +104,7 @@
 
           <h1 class="form-title">Comments</h1>
 
-          <form action="" class="comment-form">
-
-          <div class="first-name-section form-section">
-            <label for="firstName" class="first-name-lable">First Name</label>
-            <input id="firstName" type="text" required placeholder="First Name" class="first-name">
-          </div>
-
-          <div class="second-name-section form-section">
-            <label for="secondName" class="second-name-lable">Second Name</label>
-            <input id="secondName" placeholder="Second Name" required type="text" class="second-name">
-          </div>
-
-          <div class="email-section form-section">
-            <label for="email" class="email-lable">Email</label>
-             <input type="email" id="email" required placeholder="john.doe@email.com" class="email">
-          </div>
-
-          <div class="comment-section form-section">
-            <label for="comment" class="comment-label">Comment</label>
-             <textarea name="comment" placeholder="Please leave a comment..." id="comment" cols="30" rows="10" class="comment"></textarea>
-          </div>
-
-          <input type="submit" class="submit-btn">
-        </form>
+          
 
         <!------------------------
                    icons
@@ -130,7 +146,7 @@
       <img src="/Images/silverHandsLogo.png" class="logo" alt="silver hand uk logo">
 
     </footer>
-
+    <script src="about.js"></script>
 
   </body>
 </html>
